# gitkit

./: pyproject.toml
src/gitkit/: __init__.py  parts.py  series.py  utils.py
src/gitkit/commands/: misc.py  parts.py  series.py
src/gitkit/logic/: parts.py  series.py
src/gitkit/tests/: test_parts.py  test_series.py
