[project]
name = "gitkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kenneth Howes", email = "kenneth.howes53@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.46",
    "typer>=0.24.1",
]

[project.scripts]
gitkit = "gitkit:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
